--- a/index.html
+++ b/index.html
@@ -3,21 +3,22 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Java to TXT Converter</title>
+    <title>PDF to TXT Converter</title>
     <link rel="stylesheet" href="styles.css">
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/pdf.js/3.11.174/pdf.min.js"></script>
 </head>
 <body>
     <div class="container">
-        <h1>Java to TXT Converter</h1>
+        <h1>PDF to TXT Converter</h1>
         <div class="converter-box">
             <div class="command-line">
                 <div class="prompt">$</div>
                 <div class="command-input" contenteditable="true"></div>
             </div>
             <div class="input-section">
-                <h2>Upload Java Files</h2>
+                <h2>Upload PDF Files</h2>
                 <div class="file-upload">
-                    <input type="file" id="fileInput" multiple accept=".java" class="hidden">
+                    <input type="file" id="fileInput" multiple accept=".pdf" class="hidden">
                     <button id="uploadBtn">Choose Files</button>
                     <span id="fileCount">No files selected</span>
                 </div>
