--- a/index.html
+++ b/index.html
@@ -10,6 +10,9 @@
 <body>
     <div class="container">
         <h1>PDF to TXT Converter</h1>
+        <div class="warning-box">
+            <p>⚠️ Note: This converter works best with text-based PDFs. Scanned PDFs or image-based PDFs will not be converted properly. For scanned documents, please use an OCR (Optical Character Recognition) tool first.</p>
+        </div>
         <div class="converter-box">
             <div class="command-line">
                 <div class="prompt">$</div>
